--- a/ASSIGNMENT01/views/projects.hbs
+++ b/ASSIGNMENT01/views/projects.hbs
@@ -12,14 +12,8 @@
     
     <h2>Project 2: Task Management App</h2>
     <p>
-      Currently in progress, I'm working on a task management web application using Node.js, 
+      Currently, in progress, I'm working on a task management web application using Node.js, 
       Express, and MongoDB. The app will offer features like user authentication and task assignment.
-    </p>
-    
-    <h2>Project 3: [Your Project Name]</h2>
-    <p>
-      Describe your third project here. Mention the technologies used, challenges faced, and 
-      any innovative features you implemented.
     </p>
   </div>
 {{/block}}
